# vn-news-summarizer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.serena/: project.yml
app/: __init__.py  crawler.py  main.py  schemas.py  sources.py  summarizer.py
app/templates/: index.html
data/datasets/v2/: test.jsonl  val.jsonl
docs/: learning_roadmap.md
labeling/: __init__.py  batch_labeler.py  gemini_labeler.py  io.py  label_dataset.py  prompt.py  qc.py  split_dataset.py  vertex_labeler.py
notebooks/: finetune_vit5_lora.ipynb
secrets/: README.md
