[project]
name = "vn-news-summarizer"
version = "0.2.0"
description = "Simplified Vietnamese news summarizer: RSS crawl, Vertex labels, ViT5 fine-tune, FastAPI demo."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "NGUYEN HOANG KHANG", email = "khangnh.22ds@vku.udn.vn" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "tenacity>=9.0",
    "simhash>=2.1",
    "rapidfuzz>=3.10",
    "google-cloud-aiplatform>=1.74",
    "transformers>=4.46",
    "torch>=2.4",
    "sentencepiece>=0.2",
    "peft>=0.13",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "datasets>=3.1",
    "accelerate>=1.1",
    "numpy>=2.0",
    "pandas>=2.2",
    "sumy>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "labeling", "tests_simple"]
extend-exclude = [
    "data",
    "models",
    "notebooks",
    "packages",
    "scripts",
    "alembic",
    "apps",
]

[tool.pytest.ini_options]
testpaths = ["tests_simple"]
pythonpath = ["."]
addopts = ["-q"]
